--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="slide-content">
         <h2>Month 2 — Memories Blooming 🌸</h2>
       </div>
-      <img src="assets/3rd slide.png" class="slide-image" />
+      <img src="assets/3rd-slide.png" class="slide-image" />
       <div class="glitter-container"></div>
       <div class="butterfly-container"></div>
     </section>
@@ -151,7 +151,7 @@
       <div class="slide-content">
         <h2>Month 3 — Laughter & Long Talks 😊</h2>
       </div>
-      <img src="assets/4th slide.png" class="slide-image" />
+      <img src="assets/4th-slide.png" class="slide-image" />
       <div class="glitter-container"></div>
       <div class="butterfly-container"></div>
     </section>
@@ -159,7 +159,7 @@
       <div class="slide-content">
         <h2>Month 4 — Little Fights, Big Love 💢❤️</h2>
       </div>
-      <img src="assets/5th slide.png" class="slide-image" />
+      <img src="assets/5th-slide.png" class="slide-image" />
       <div class="glitter-container"></div>
       <div class="butterfly-container"></div>
     </section>
@@ -167,7 +167,7 @@
       <div class="slide-content">
         <h2>Month 5 — Growing Together 🌱</h2>
       </div>
-      <img src="assets/6th slide.png" class="slide-image" />
+      <img src="assets/6th-slide.png" class="slide-image" />
       <div class="glitter-container"></div>
       <div class="butterfly-container"></div>
     </section>
@@ -175,7 +175,7 @@
       <div class="slide-content">
         <h2>Month 6 — Forever Promises ✨</h2>
       </div>
-      <video src="assets/7th slide.mp4" autoplay loop muted></video>
+      <video src="assets/7th-slide.mp4" autoplay loop muted></video>
       <div class="glitter-container"></div>
       <div class="butterfly-container"></div>
     </section>
@@ -183,7 +183,7 @@
       <div class="slide-content">
         <h2>Month 7 — Endless Magic 🎇</h2>
       </div>
-      <video src="assets/8th slide.mp4" autoplay loop muted></video>
+      <video src="assets/8th-slide.mp4" autoplay loop muted></video>
       <div class="glitter-container"></div>
       <div class="butterfly-container"></div>
     </section>
